--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- Projects Grid -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 auto-rows-fr transition-opacity duration-500">
             <!-- Project Cards (data-category 적용) -->
-            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="철계단">
+            <div class="group block overflow-hidden project-item transition-opacity duration-500" data-category="철계단">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                     <img src="images/분당 네일샵 철계단.jpg" alt="분당 네일샵 철계단 제작" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute top-6 left-6">
@@ -720,6 +720,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
